style: Fixed overflow scroll on Media and Inspector

--- a/src/components/Manager/Inspector/Inspector.css
+++ b/src/components/Manager/Inspector/Inspector.css
@@ -8,6 +8,7 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 .inspector-content {
